--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -29,25 +29,24 @@
 	
 			<fieldset>
 				<legend>Dados do Autor</legend>
-				<h:panelGrid columns="3">
 
-					<h:outputLabel value="Autor:" />
-					<h:selectOneMenu value="#{livroBean.autorId}">
-						<f:selectItems value="#{livroBean.autores}" itemValue="#{autor.id}"
-							itemLabel="#{autor.nome}" var="autor" />
-					</h:selectOneMenu>
-					<h:commandButton action="#{livroBean.adicionarAutor}"
-						value="Adiciona Autor" />
+				<h:outputLabel value="Selecione Autor:" for="autor" />
+				<h:selectOneMenu value="#{livroBean.autorId}">
+					<f:selectItems value="#{livroBean.autores}" var="autor"
+						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+				</h:selectOneMenu>
+				<h:commandButton value="Gravar Autor"
+					action="#{livroBean.gravarAutor}" />
 	
-					<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
-						<h:column>
-							<h:outputText value="#{autor.nome}" />
-						</h:column>
-					</h:dataTable>
-				</h:panelGrid>
+				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+					<h:column>
+						<h:outputText value="#{autor.nome}" />
+					</h:column>
+				</h:dataTable>
 			</fieldset>
-	
+
 			<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+
 		</h:form>
 	
 		<h:dataTable value="#{livroBean.livros}" var="livro">
@@ -56,14 +55,15 @@
 				<h:outputText value="#{livro.titulo}" />
 			</h:column>
 			<h:column>
+				<f:facet name="header">ISBN</f:facet>
+				<h:outputText value="#{livro.isbn}" />
+			</h:column>
+			<h:column>
 				<f:facet name="header">Preço</f:facet>
 				<h:outputText value="#{livro.preco}" />
 			</h:column>
-			<h:column>
-				<f:facet name="header">Data</f:facet>
-				<h:outputText value="#{livro.dataLancamento}" />
-			</h:column>
 		</h:dataTable>
+	
 	</h:body>
 
 </html>
