--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -7,22 +7,31 @@
 	<h:body>
 		<h1>Novo Livro</h1>
 		<h:form>
+			<h:messages />
 			<fieldset>
 				<legend>Dados do Livro</legend>
 				<h:panelGrid columns="2">
 
 					<h:outputLabel value="Titulo:" for="titulo" />
-					<h:inputText id="titulo" value="#{livroBean.livro.titulo}" />
+					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+						required="true" requiredMessage="Título obrigatório"
+						validatorMessage="T ítulo não pode ser superior a 40">
+						<f:validateLength maximum="40" />
+					</h:inputText>
 
 					<h:outputLabel value="ISBN:" for="isbn" />
-					<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
+					<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
+						validator="#{livroBean.comecaComDigitoUm}" />
 
 					<h:outputLabel value="Preço:" for="preco" />
 					<h:inputText id="preco" value="#{livroBean.livro.preco}" />
 
 					<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
 					<h:inputText id="dataLancamento"
-						value="#{livroBean.livro.dataLancamento}" />
+						value="#{livroBean.livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy"
+							timeZone="America/Sao_Paulo" />
+					</h:inputText>
 
 				</h:panelGrid>
 			</fieldset>
@@ -51,7 +60,7 @@
 	
 		<h:dataTable value="#{livroBean.livros}" var="livro">
 			<h:column>
-				<f:facet name="header">Titulo</f:facet>
+				<f:facet name="header">Título</f:facet>
 				<h:outputText value="#{livro.titulo}" />
 			</h:column>
 			<h:column>
@@ -60,7 +69,16 @@
 			</h:column>
 			<h:column>
 				<f:facet name="header">Preço</f:facet>
-				<h:outputText value="#{livro.preco}" />
+				<h:outputText value="#{livro.preco}">
+					<f:convertNumber type="currency" pattern="R$ #0.00"
+						currencySymbol="R$" locale="pt_BR" />
+				</h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Data</f:facet>
+				<h:outputText value="#{livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
+				</h:outputText>
 			</h:column>
 		</h:dataTable>
 	
