--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -4,10 +4,14 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
+	<h:head />
+	
 	<h:body>
 		<h1>Novo Livro</h1>
 		<h:form>
-			<h:messages />
+
+			<h:messages id="messages" />
+
 			<fieldset>
 				<legend>Dados do Livro</legend>
 				<h:panelGrid columns="2">
@@ -15,8 +19,9 @@
 					<h:outputLabel value="Titulo:" for="titulo" />
 					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
 						required="true" requiredMessage="Título obrigatório"
-						validatorMessage="T ítulo não pode ser superior a 40">
+						validatorMessage="Título não pode ser superior a 40">
 						<f:validateLength maximum="40" />
+						<f:ajax event="blur" render="messages" />
 					</h:inputText>
 
 					<h:outputLabel value="ISBN:" for="isbn" />
@@ -40,33 +45,41 @@
 				<legend>Dados do Autor</legend>
 
 				<h:outputLabel value="Selecione Autor:" for="autor" />
-				<h:selectOneMenu value="#{livroBean.autorId}">
+				<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
 					<f:selectItems value="#{livroBean.autores}" var="autor"
 						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
 				</h:selectOneMenu>
+
 				<h:commandButton value="Gravar Autor"
-					action="#{livroBean.gravarAutor}" />
+					action="#{livroBean.gravarAutor}">
+					<f:ajax execute="autor" render="tabelaAutores" />
+				</h:commandButton>
 	
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+					id="tabelaAutores">
 					<h:column>
 						<h:outputText value="#{autor.nome}" />
 					</h:column>
 				</h:dataTable>
 			</fieldset>
 
-			<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+			<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+				<f:ajax execute="@form" render="@form :tabelaLivros" />
+			</h:commandButton>
 
 		</h:form>
 	
-		<h:dataTable value="#{livroBean.livros}" var="livro">
+		<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
 			<h:column>
 				<f:facet name="header">Título</f:facet>
 				<h:outputText value="#{livro.titulo}" />
 			</h:column>
+
 			<h:column>
 				<f:facet name="header">ISBN</f:facet>
 				<h:outputText value="#{livro.isbn}" />
 			</h:column>
+
 			<h:column>
 				<f:facet name="header">Preço</f:facet>
 				<h:outputText value="#{livro.preco}">
@@ -74,6 +87,7 @@
 						currencySymbol="R$" locale="pt_BR" />
 				</h:outputText>
 			</h:column>
+
 			<h:column>
 				<f:facet name="header">Data</f:facet>
 				<h:outputText value="#{livro.dataLancamento.time}">
