--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -6,6 +6,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<ui:composition template="_template.xhtml">
+		
 		<ui:define name="titulo">
 				Novo Autor
 		</ui:define>
@@ -22,12 +23,29 @@
 							<f:validateLength minimum="5" />
 							<f:ajax event="blur" render="messageNome" />
 						</h:inputText>
-
+						
 						<h:message for="nome" id="messageNome" />
 
 						<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 					</h:panelGrid>
 				</fieldset>
+			</h:form>
+			
+			<h:form id="formTabelaAutores">
+				<h:dataTable value="#{autorBean.autores}" var="autor" id="tabelaAutores">
+					<h:column>
+						<f:facet name="header">Nome</f:facet>
+						<h:outputText value="#{autor.nome}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Alterar</f:facet>
+						<h:commandLink value="altera" action="#{autorBean.carregar(autor)}"/>
+					</h:column>
+					<h:column>
+						<f:facet name="header">Remover</f:facet>
+						<h:commandLink value="remove" action="#{autorBean.remover(autor)}"/>
+					</h:column>
+				</h:dataTable>
 			</h:form>
 		</ui:define>
 
